[package]
name = "rbx_obj"
version = "0.1.0"
authors = ["Jeffrey Skinner <jeff@je.gy>"]
edition = "2024"
description = "Convert Roblox places/models to obj"
license = "MIT OR Apache-2.0"
keywords = ["roblox", "rbx", "rblx", "rbxm"]

[dependencies]
rbx_binary = "2.0.0"
rbx_dom_weak = "4.0.0"
rbx_types = "3.0.0"
